WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31127
Hang on attempting to change indent level
https://bugs.webkit.org/show_bug.cgi?id=31127
Summary
Hang on attempting to change indent level
Enrica Casucci
Reported
2009-11-04 10:14:24 PST
Repro steps: 1. Enter the following markup in any HTML editor <ul><li>hello world<br>ciao</li><li>how are you?<br>good<br></li><div><br></div></ul> 2. Select all 3. Outdent Expected: The list is outdented. Actual: the browser hangs.
Attachments
Patch
(11.02 KB, patch)
2009-11-04 14:27 PST
,
Enrica Casucci
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2009-11-04 14:27:08 PST
Created
attachment 42521
[details]
Patch
Adele Peterson
Comment 2
2009-11-04 15:44:34 PST
Comment on
attachment 42521
[details]
Patch Looks good!
Enrica Casucci
Comment 3
2009-11-05 09:05:17 PST
Committed revision 50536.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug