WebCore: Hang in Mail on attempting to change indent level. <rdar://problem/7131805> https://bugs.webkit.org/show_bug.cgi?id=31127

Reviewed by Adele Peterson.

The hang was caused by an infinite loop inside outdentRegion.
The code did not account for the fact that, when a list item
cointains multiple paragraphs, outdent moves all paragraphs at
once, invalidating some of the position we keep track of in the loop.
Some code refactoring has also been done to minimize duplicate code.

Test: editing/execCommand/outdent-multiparagraph-list.html

* editing/IndentOutdentCommand.cpp:
(WebCore::IndentOutdentCommand::indentRegion): Moved code in common with
outdentRegion to doApply.
(WebCore::IndentOutdentCommand::outdentRegion): Fixed endless loop.
(WebCore::IndentOutdentCommand::doApply): Some code refactoring.
* editing/IndentOutdentCommand.h: Added VisiblePosition parameters to
indentRegion and outdentRegion.

LayoutTests: Hang in Mail on attempting to change indent level
<rdar://problem/7131805>
https://bugs.webkit.org/show_bug.cgi?id=31127

Reviewed by Adele Peterson.

Added test to cover all the different code paths.

* editing/execCommand/outdent-multiparagraph-list-expected.txt: Added.
* editing/execCommand/outdent-multiparagraph-list.html: Added.



Canonical link: https://commits.webkit.org/41966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50536 268f45cc-cd09-0410-ab3c-d52691b4dbfc